--- a/mysite/blog/templates/blog/post_list.html
+++ b/mysite/blog/templates/blog/post_list.html
@@ -8,6 +8,9 @@
             <div class="date">
                     {{ post.published_date }}
                 </div>
+                {% if user.is_authenticated %}
+                     <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+                {% endif %}
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
     {% endfor %}
